# SymbolicHEC

./: .gitignore  CMakeLists.txt  README.md
certifiable-rwhe-calibration/: .gitignore  Project.toml  README.md
certifiable-rwhe-calibration/data/real-world/combined/: tag_0_cam_0_A.csv  tag_0_cam_0_B.csv  tag_0_cam_1_A.csv  tag_0_cam_1_B.csv  tag_0_cam_2_A.csv  tag_0_cam_2_B.csv  tag_0_cam_3_A.csv  tag_0_cam_3_B.csv  tag_0_cam_5_A.csv  tag_0_cam_5_B.csv  tag_0_cam_7_A.csv  tag_0_cam_7_B.csv  tag_11_cam_0_A.csv  tag_11_cam_0_B.csv  tag_11_cam_1_A.csv  tag_11_cam_1_B.csv  tag_11_cam_3_A.csv  tag_11_cam_3_B.csv  tag_11_cam_4_A.csv  tag_11_cam_4_B.csv  tag_11_cam_5_A.csv  tag_11_cam_5_B.csv  tag_11_cam_6_A.csv  tag_11_cam_6_B.csv  tag_11_cam_7_A.csv  tag_11_cam_7_B.csv  tag_12_cam_0_A.csv  tag_12_cam_0_B.csv  tag_12_cam_1_A.csv  tag_12_cam_1_B.csv  tag_12_cam_2_A.csv  tag_12_cam_2_B.csv  tag_12_cam_4_A.csv  tag_12_cam_4_B.csv  tag_12_cam_5_A.csv  tag_12_cam_5_B.csv  tag_13_cam_2_A.csv  tag_13_cam_2_B.csv  tag_13_cam_7_A.csv  tag_13_cam_7_B.csv  (+106 more)
certifiable-rwhe-calibration/examples/: solve_axyb_input_file.jl  solve_axyb_multiple_pairs.jl  solve_axyb_noise_sweep.jl
certifiable-rwhe-calibration/experiments/: arbitrary_cost_experiment.jl  constraint_rank_analysis.jl  correspondence_free_registration_pose.jl  correspondence_free_registration_pose_schur.jl  correspondence_free_registration_rotation.jl  double_rotation_arbitrary_cost_experiment.jl  fixed_camera_robot_world.jl  fixed_camera_robot_world_scale.jl  ill_conditioned_robot_world.jl  ill_conditioned_robot_world_dual.jl  injective_matching_pose.jl  known_scale_hand_eye_observability_analysis.jl  local_solver_step_size.jl  local_vs_global_hand_eye_calibration.jl  permutation_matrices.jl  planar_ik_sdp_inequality_stability.jl  rigidity_analysis.jl  robot_world_poses_on_sphere.jl  robot_world_poses_on_sphere_scale.jl  robot_world_random_perturbation_stability.jl  robot_world_sdp_stability.jl  rw_multi_eye_multi_hand.jl  twisted_cubic_inequality.jl  unknown_scale_hand_eye_analysis.jl  unknown_scale_robot_world_analysis.jl  zero_sum_game_solver.jl
certifiable-rwhe-calibration/src/: RotationSDP.jl  low_rank_solver.jl  rotation_qcqp_gradient.jl  rotation_sdp_constraints.jl  rotation_sdp_solver.jl  rotation_sdp_solver_jump.jl  sparse_rotation_sdp_dual_constraints.jl  sparse_rotation_sdp_dual_constraints_jump.jl
certifiable-rwhe-calibration/src/calibration/: hand_eye_costs.jl  robot_world_costs.jl
certifiable-rwhe-calibration/src/local_solver/: lie_theory_helpers.jl  lie_theory_types.jl  linear_initializations.jl  local_lie_group_hand_eye_solver.jl  local_lie_group_robot_world_solver.jl
certifiable-rwhe-calibration/src/utils/: experiment_setup.jl  rotation_noise.jl
certifiable-rwhe-calibration/test/: double_rotation_constraints.jl  hand_eye_calibration.jl  hand_eye_costs.jl  lie_theory_helpers.jl  linear_initializations.jl  local_lie_group_hand_eye_solver.jl  local_lie_group_robot_world_solver.jl  many_fixed_eyes_scale.jl  multi_eye_multi_base_cost.jl  robot_world_calibration.jl  robot_world_costs.jl  rotation_sdp_constraints.jl  rotation_sdp_solver.jl  sparse_dual_cost.jl  sparse_dual_rotation_sdp_constraints.jl  sparse_dual_scale_solver.jl  sparse_dual_solver_w_concat.jl  sparse_dual_solver_w_jump.jl  thousand_eye_restrict.jl  thousand_eye_restrict_scale.jl
data/templates/: AXYB_complete_x1.tpl  AXYB_complete_x2.tpl  AXYB_complete_x3.tpl  AXYB_complete_x4.tpl  AXYB_complete_x5.tpl  AXYB_complete_x6.tpl
include/axyb/: axyb_solver.hpp  generated_symbolics.hpp  lapack.hpp  linear_solver.hpp  matrix.hpp  measurement_io.hpp  template_data.hpp
src/: axyb_solver.cpp  cli.hpp  generated_symbolics.cpp  linear_solver.cpp  main_benchmark_linear.cpp  main_input_file_example.cpp  main_loop.cpp  main_rw_multi_eye_multi_hand.cpp  main_single.cpp  matrix.cpp  measurement_io.cpp  template_data.cpp
tools/: generate_from_matlab.py
